<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Visual novel</string>
    <string name="titleName">Моя визуальная новелла</string>
    <string name="NameText">Привет! Меня зовут Кирюша. А тебя?</string>
    <string name="confirmText">Подтвердить</string>
    <string name="confirm">Подтвердить</string>
    <string name="nameHint">Введите свое имя...</string>
    <string name="case3"></string>
    <string name="case2"></string>
    <string name="case1"></string>
    <string name="storyText" />
    <string name="EndText">Спасибо, что поиграли!</string>
    <string name="endBut">Пройти еще раз</string>
    <string name="toastText">Имя не может быть пустым</string>
    <string name="ButtonText">Начать</string>
    <string name="slideZeroRun1">"Пойдем на пробежку"</string>
    <string name="slideZeroCamp2">"Пойдем в поход"</string>
    <string name="slideZeroField3">"Погуляем по полю"</string>
    <string name="slideOneFilm1">"Да, и посмотрим фильм"</string>
    <string name="slideOneHW2">"Да, и отпразднуем хэллоуин"</string>
    <string name="slideTwoFilm1">"Пойдем домой и посмотрим фильм"</string>
    <string name="slideTwoHW2">"Пойдем домой и отпразднуем Хэллоуин"</string>
    <string name="slideThreeFilm1">"Может, посмотрим фильм?"</string>
    <string name="slideThreeHW2">"Да, отпразднуем Хэллоуин"</string>
    <string name="slideFourLike1">"Мне понравился!"</string>
    <string name="slideFourDislike2">"Не очень..."</string>
    <string name="slideFiveFilm1">"Да! Может, посмотрим фильм?"</string>
    <string name="slideFiveDress2">"Да! Давай сделаем костюмы!"</string>
    <string name="slideLate">"Да, уже поздно..."</string>
    <string name="slideEightLike1">"Твой тоже очень красивый!"</string>
    <string name="slideEightDislike2">"А мне, если честно, не нравится твой..."</string>
    <string name="TitleZero">"Отлично, $! Чем займемся?"</string>
    <string name="TitleOne">"Может, пойдем домой?.."</string>
    <string name="TitleTwo">"Как уютно... Но уже темнеет."</string>
    <string name="TitleThree">"Тебе грустно... Пойдем домой?"</string>
    <string name="TitleFour">"Как тебе фильм?"</string>
    <string name="TitleFive">"Получается очень красиво!"</string>
    <string name="TitleSix">"Отлично! А теперь пора спать..."</string>
    <string name="TitleSeven">"Жаль... Тогда пойдем спать?"</string>
    <string name="TitleEight">"Мне нравится твой костюм."</string>
    <string name="TitleNine">"Спасибо! Ну, пойдем спать?"</string>
    <string name="TitleTen">"Ничего, я не в обиде. Пойдем спать?"</string>

</resources>
